--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.14.2",
     "react-icons": "^4.2.0",
+    "react-input-mask": "^3.0.0-alpha.2",
     "react-router-dom": "^5.2.1",
     "react-scripts": "4.0.3",
     "styled-components": "^5.3.1",
