--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "dependencies": {
     "@aws-amplify/datastore": "^3.3.3",
+    "@honeybadger-io/js": "^3.2.5",
+    "@honeybadger-io/react": "^2.0.0",
     "@hookform/resolvers": "^2.8.0",
     "@material-ui/core": "^4.12.3",
     "@testing-library/jest-dom": "^5.11.4",
