--- a/package.json
+++ b/package.json
@@ -4,10 +4,15 @@
   "private": true,
   "dependencies": {
     "@aws-amplify/datastore": "^3.3.3",
+    "@emotion/react": "^11.7.1",
+    "@emotion/styled": "^11.6.0",
     "@honeybadger-io/js": "^3.2.5",
     "@honeybadger-io/react": "^2.0.0",
     "@hookform/resolvers": "^2.8.0",
     "@material-ui/core": "^4.12.3",
+    "@mui/icons-material": "^5.3.0",
+    "@mui/material": "^5.3.0",
+    "@mui/styles": "^5.3.0",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
@@ -17,6 +22,7 @@
     "react-hook-form": "^7.14.2",
     "react-icons": "^4.2.0",
     "react-input-mask": "^3.0.0-alpha.2",
+    "react-material-ui-carousel": "^3.1.1",
     "react-router-dom": "^5.2.1",
     "react-scripts": "4.0.3",
     "styled-components": "^5.3.1",
