--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -1,25 +1,5 @@
 {
   "api": {
-    "theranch": {
-      "service": "AppSync",
-      "providerPlugin": "awscloudformation",
-      "output": {
-        "authConfig": {
-          "defaultAuthentication": {
-            "authenticationType": "API_KEY",
-            "apiKeyConfig": {
-              "apiKeyExpirationDays": 30,
-              "description": "api key description"
-            }
-          },
-          "additionalAuthenticationProviders": [
-            {
-              "authenticationType": "AWS_IAM"
-            }
-          ]
-        }
-      }
-    },
     "meatpriceapi": {
       "service": "API Gateway",
       "providerPlugin": "awscloudformation",
@@ -27,6 +7,14 @@
         {
           "category": "function",
           "resourceName": "meatpricefunction",
+          "attributes": [
+            "Name",
+            "Arn"
+          ]
+        },
+        {
+          "category": "function",
+          "resourceName": "customerorderlambda",
           "attributes": [
             "Name",
             "Arn"
@@ -54,13 +42,42 @@
           }
         }
       ]
+    },
+    "customerorderlambda": {
+      "build": true,
+      "providerPlugin": "awscloudformation",
+      "service": "Lambda",
+      "dependsOn": [
+        {
+          "category": "storage",
+          "resourceName": "customerorderdb",
+          "attributes": [
+            "Name",
+            "Arn"
+          ],
+          "attributeEnvMap": {
+            "Name": "TABLE_NAME",
+            "Arn": "TABLE_ARN"
+          }
+        }
+      ]
     }
   },
   "storage": {
     "meatpricedb": {
       "service": "DynamoDB",
       "providerPlugin": "awscloudformation"
+    },
+    "customerorderdb": {
+      "service": "DynamoDB",
+      "providerPlugin": "awscloudformation"
     }
   },
-  "auth": {}
+  "auth": {},
+  "hosting": {
+    "S3AndCloudFront": {
+      "service": "S3AndCloudFront",
+      "providerPlugin": "awscloudformation"
+    }
+  }
 }
