--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@mui/icons-material": "^5.3.0",
     "@mui/material": "^5.3.0",
     "@mui/styles": "^5.3.0",
+    "@stripe/react-stripe-js": "^1.7.0",
+    "@stripe/stripe-js": "^1.24.0",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
@@ -24,7 +26,7 @@
     "react-input-mask": "^3.0.0-alpha.2",
     "react-material-ui-carousel": "^3.1.1",
     "react-router-dom": "^5.2.1",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^5.0.0",
     "styled-components": "^5.3.1",
     "typescript": "^4.4.2",
     "web-vitals": "^1.0.1",
